--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "gulp-sequence": "^0.4.5",
         "gulp-stylelint": "^5.0.0",
         "node-sass-import-once": "^1.2.0",
+        "polymer-cli": "^1.5.7",
         "gulp-style-modules": "^0.1.0",
         "stylelint": "^8.0.0",
         "stylelint-config-vaadin": "^0.1.1",
