adding listeners on width/height change to update box whisker comps

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
     "Px": false,
     "PxColorsBehavior": false,
     "PxVisBehavior": false,
+    "PxVisBehaviorChart": false,
+    "PxVisBehaviorD3": false,
     "Vaadin": false
   }
 }
