--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "homepage": "http://predix.io/",
   "devDependencies": {
     "browser-sync": "^2.13.0",
+    "ensure-px-license": "^1.0.0",
     "eslint": "^4.0.0",
     "eslint-config-vaadin": "^0.2.5",
     "eslint-plugin-html": "^3.0.0",
@@ -29,13 +30,13 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-sequence": "^0.4.5",
+    "gulp-style-modules": "^0.1.0",
     "gulp-stylelint": "^5.0.0",
     "node-sass-import-once": "^1.2.0",
     "polymer-cli": "^1.5.7",
-    "gulp-style-modules": "^0.1.0",
+    "stream-combiner2": "^1.1.1",
     "stylelint": "^8.0.0",
     "stylelint-config-vaadin": "^0.1.1",
-    "stream-combiner2": "^1.1.1",
     "yargs": "^6.0.0"
   },
   "license": "Apache-2.0"
